src/routes/game/components/elements/searchCardInput/SearchCardInput.module.css
.searchBox {
  padding-inline-start: var(--form-element-spacing-horizontal);
  padding-inline-end: var(--form-element-spacing-horizontal);
  margin: 0;
  margin-bottom: 0px;
  --background-color: var(--near-black);
  --border-color: var(--form-element-border-color);
  --color: var(--form-element-color);
  --box-shadow: none;
  border: var(--border-width) solid var(--border-color);
  border-radius: var(--border-radius);
  outline: none;
  background-color: var(--background-color);
  box-shadow: var(--box-shadow);
  color: var(--color);
  font-weight: var(--font-weight);
  transition: background-color var(--transition), border-color var(--transition),
    color var(--transition), box-shadow var(--transition);
  font-size: 1rem;
  line-height: var(--line-height);
  font-family: inherit;
  letter-spacing: inherit;
  text-transform: none;
}

.focused {
  border-color: var(--theme-primary)
}

.menuList {
  z-index: 99;
  position: absolute;
  top: auto;
  right: 0;
  left: 0;
  flex-direction: column;
  margin: 0;
  padding: 0;
  border: var(--border-width) solid var(--dropdown-border-color);
  border-radius: var(--border-radius);
  border-top-right-radius: 0;
  border-top-left-radius: 0;
  background-color: var(--dropdown-background-color);
  box-shadow: var(--card-box-shadow);
  color: var(--dropdown-color);
  white-space: nowrap;
  height: 15vh;
  height: 15dvh;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  font-style: normal;
  font-weight: var(--font-weight);
  font-size: var(--font-size);
  padding-inline-start: var(--spacing);
  padding-inline-end: 0;
  box-sizing: border-box;
  background-repeat: no-repeat;
  --block-spacing-vertical: calc(var(--spacing) * 4);
  line-height: var(--line-height);
  font-family: var(--font-family);
  text-rendering: optimizeLegibility;
  overflow-wrap: break-word;
  cursor: default;
  -moz-tab-size: 4;
  tab-size: 4;
}

.container {
  width: 100%;
}

.listItem {
  display: block;
  margin: calc(var(--form-element-spacing-vertical) * -0.5)
    calc(var(--form-element-spacing-horizontal) * -1);
  padding: calc(var(--form-element-spacing-vertical) * 0.5)
    var(--form-element-spacing-horizontal);
  overflow: hidden;
  color: var(--dropdown-color);
  text-decoration: none;
  text-overflow: ellipsis;
}

.selected {
  background-color: var(--primary-focus);
}

.listItem:hover {
  background-color: var(--dropdown-hover-background-color);
}

.button {
  width: min(20rem, 100%);
  margin-left: auto;
  margin-right: auto;
  display: block;
}

.styledInput > input {
  box-shadow: none;
  min-width: 0 !important;
  opacity: 0  !important;
}

.styledInput::after,
.styledInput::before {
  display: none !important;
  min-width: 0 !important;
}

